--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,8 @@
         width: 1060px;
         top:0px;
         z-index: 10;
+        display: flex;
+    margin-left: 10px;
     }
   }
 #home{
